--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Topos
 email: jon@jonmsterling.com
 description: >-
-  A mathematical web page
+  A mathematical web page.
 baseurl: &baseurl "/math"
 url: "https://www.jonsmsterling.com/"
 twitter_username: jonmsterling
