feat: rewrite of gerby-like behaviour in Gnarly

--- a/_config.yml
+++ b/_config.yml
@@ -77,8 +77,8 @@ defaults:
   - scope:
       type: nodes
     values:
-      layout: page
+      layout: node
   - scope:
       type: lectures
     values:
-      layout: page
+      layout: node
