--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,10 @@ plugins:
 scholar:
   style: elsevier-harvard
   bibliography: refs-bibtex.bib
+  bibliography_template: bib
+  details_dir: bibliography
+  details_layout: bibtex.html
+  details_link: Details
 
 collections:
   lectures:
