make small bibliography, remove submodule
jekyll-scholar generates details pages for ALL bibliography items
regardless of whether they are cited, so we cannot include my full
database anymore.

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ plugins:
 
 scholar:
   style: elsevier-harvard
-  bibliography: refs-bibtex.bib
+  bibliography: refs.bib
   bibliography_template: bib
   details_dir: bibliography
   details_layout: bibtex.html
