remove spurious pages from the top page header
it was putting all of the bibliographic detail pages in here!

--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,8 @@ scholar:
   details_layout: bibtex.html
   details_link: Details
 
+header_pages: ['']
+
 collections:
   lectures:
     output: true
