--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,8 @@ scholar:
   details_layout: bibtex.html
   details_link: Details
 
+header_pages: ['']
+
 collections:
   lectures:
     output: true
