--- a/_config.yml
+++ b/_config.yml
@@ -96,3 +96,12 @@ defaults:
     values:
       layout: node
       excerpt: ""
+
+changelog:
+  authors:
+    jon@jonmsterling.com:
+      link: https://www.jonmsterling.com/
+    carlo@carloangiuli.com:
+      link: http://www.cs.cmu.edu/~cangiuli/
+    paolo.brasolin@gmail.com:
+      hide: true
