feat: drop numbering and iso_2145; introduce clickers and to_numbering filter

--- a/_config.yml
+++ b/_config.yml
@@ -103,13 +103,16 @@ sheafy:
       toc: true
       layout: sheafy/tree/default
       sublayout: sheafy/node/section
+      clicker: section
     theorem:
       toc: false
       layout: sheafy/tree/default
       sublayout: sheafy/node/result
       genus: Theorem
+      clicker: result
     definition:
       toc: false
       layout: sheafy/tree/default
       sublayout: sheafy/node/result
       genus: Definition
+      clicker: result
