feat: #6 sublayouts, taxa, clickers and better layouts
* feat: sublayouts for nodes

* feat: improve node lookup

* Split internal category definition node

* add a period after the result title

* feat: sketch taxa mechanism

* refactor: clean up sheafy taxa

* refactor: assume uniqueness of parent

* feat: drop numbering and iso_2145; introduce clickers and to_numbering filter

* refactor: show nodes in TOC based on taxa

* fix: don't display TOC if there are no items

* tweak: omit final period from numbering, render in-template

The reason for this is that I want "Definition 5.1*a (foo).  Blah blah"
rather than "Defintion 5.1*a. (foo). Blah blah".

* feat: use sublayouts for headings; replace topmost with subroot

* merge: move the 0015 => 001A to fix conflict with 'main' branch

* refactor: rename "sheafy" attribute to "taxon"

Co-authored-by: Jon Sterling <jon@jonmsterling.com>

--- a/_config.yml
+++ b/_config.yml
@@ -89,14 +89,30 @@ defaults:
   - scope:
       type: nodes
     values:
-      layout: node
+      taxon: section
       excerpt: ""
   - scope:
       type: lectures
     values:
-      layout: node
+      taxon: section
       excerpt: ""
 
+sheafy:
+  taxa:
+    section:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/section
+      clicker: section
+    theorem:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Theorem
+      clicker: result
+    definition:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Definition
+      clicker: result
 changelog:
   authors:
     jon@jonmsterling.com:
