split a lot more nodes

--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,21 @@ sheafy:
       sublayout: sheafy/node/result
       genus: Definition
       clicker: result
+    exercise:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Exercise
+      clicker: result
+    construction:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Construction
+      clicker: result
+    example:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Example
+      clicker: result
 changelog:
   authors:
     jon@jonmsterling.com:
