add qed squares to proofs

--- a/_config.yml
+++ b/_config.yml
@@ -114,6 +114,11 @@ sheafy:
       sublayout: sheafy/node/result
       genus: Lemma
       clicker: result
+    corollary:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Corollary
+      clicker: result
     definition:
       layout: sheafy/tree/default
       sublayout: sheafy/node/result
