config: regularize my name in the changelog
Apparently I have my git config set differently on different computers.

--- a/_config.yml
+++ b/_config.yml
@@ -142,6 +142,7 @@ sheafy:
 changelog:
   authors:
     jon@jonmsterling.com:
+      name: Jon Sterling
       link: https://www.jonmsterling.com/
     carlo@carloangiuli.com:
       link: http://www.cs.cmu.edu/~cangiuli/
