--- a/_config.yml
+++ b/_config.yml
@@ -165,6 +165,11 @@ sheafy:
       sublayout: sheafy/node/result
       genus: Intuition
       clicker: result
+    warning:
+      layout: sheafy/tree/default
+      sublayout: sheafy/node/result
+      genus: Warning
+      clicker: warning
 
 changelog:
   authors:
