fix stupid typo in the config

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: jon@jonmsterling.com
 description: >-
   A mathematical web page.
 baseurl: &baseurl "/math"
-url: "https://www.jonsmsterling.com/"
+url: "https://www.jonmsterling.com/"
 twitter_username: jonmsterling
 github_username: jonsterling
 
